fix: modal overflowing content

--- a/Dashboard/src/app/pages/resources/view-resource-modal/view-resource-modal.component.scss
+++ b/Dashboard/src/app/pages/resources/view-resource-modal/view-resource-modal.component.scss
@@ -5,4 +5,11 @@
 
 .modal-content {
     color: $dropdown-text;
+    position: relative;
+    display: table;
+    /* This is important */
+    overflow-y: auto;
+    overflow-x: auto;
+    width: auto;
+    min-width: 300px;
 }
